--- a/product-search-service.properties
+++ b/product-search-service.properties
@@ -1,17 +1,21 @@
-#server.port=9001
-#eureka.client.service-url.defaultZone= http://10.151.60.164:8761/eureka
+server.port=9001
+#10.151.60.164 changed to localhost
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=KkdDb
 #spring.data.mongodb.repositories.type=true
-#spring.rabbitmq.host=10.151.61.10
-#spring.rabbitmq.username=admin
-#spring.rabbitmq.password=admin
-#spring.zipkin.service.name=product-search-service
-#spring.zipkin.sender.type=web
-#spring.zipkin.baseUrl=10.151.60.164:9411
-#spring.sleuth.sampler.percentage=1.0
-#spring.cloud.stream.default.contentType=application/json
+
+#10.151.61.10 changed to localhost
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.zipkin.service.name=product-search-service
+spring.zipkin.sender.type=web
+#10.151.60.164 to localhost
+spring.zipkin.baseUrl=localhost:9411
+spring.sleuth.sampler.percentage=1.0
+spring.cloud.stream.default.contentType=application/json
 
 #New properties
 spring.application.name=product-search-service
@@ -24,17 +28,4 @@ message-not-found=The resource you were trying to reach is not found
 #10.151.60.164 changed to localhost
 mongoUrl = mongodb://localhost:27017  
 dbName=kkdDb
-#server.port=9001
-#eureka.client.service-url.defaultZone= http://10.151.60.164:8761/eureka
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=KkdDb
-#spring.data.mongodb.repositories.type=true
-#spring.rabbitmq.host=10.151.61.10
-#spring.rabbitmq.username=admin
-#spring.rabbitmq.password=admin
-#spring.zipkin.service.name=product-search-service
-#spring.zipkin.sender.type=web
-#spring.zipkin.baseUrl=10.151.60.164:9411
-#spring.sleuth.sampler.percentage=1.0
-#spring.cloud.stream.default.contentType=application/json
+
