--- a/farmer-product-service.properties
+++ b/farmer-product-service.properties
@@ -1,6 +1,17 @@
 #spring.cloud.config.uri=http://10.151.60.164:8888
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 server.port=8011
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=farmer-product-db
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.data.mongodb.database=kkdDb
+spring.data.mongodb.repositories.enabled=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.zipkin.service.name=farmer-product-service
+spring.zipkin.sender.type=web
+spring.zipkin.baseUrl=localhost:9411
+spring.sleuth.sampler.percentage=1.0
+spring.cloud.stream.default.contentType=application/json
